--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,7 +21,7 @@
             android:id="@+id/email"
             android:layout_width="300dp"
             android:layout_height="40dp"
-            android:hint="email"
+            android:hint="@string/email"
             android:inputType="textEmailAddress"
             android:maxLines="1"
             android:layout_marginTop="20dp"
@@ -33,7 +33,7 @@
             android:id="@+id/password"
             android:layout_width="300dp"
             android:layout_height="40dp"
-            android:hint="Clave"
+            android:hint="@string/password"
             android:imeActionId="@+id/login"
             android:imeOptions="actionUnspecified"
             android:inputType="textPassword"
