--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,9 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+
+    <dimen name="alert_detail_button_width">120dp</dimen>
+    <dimen name="alert_detail_button_height">50dp</dimen>
+    <dimen name="alert_detail_button_margin">5dp</dimen>
 </resources>
