--- a/app/src/main/res/layout/qlistview.xml
+++ b/app/src/main/res/layout/qlistview.xml
@@ -16,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="10dp"
-        android:textSize="15sp"
+        android:textSize="@dimen/list_main_text_size"
         android:textStyle="bold"
         android:textColor="@color/text_list_color" />
 
