--- a/app/src/main/res/layout/list_activity.xml
+++ b/app/src/main/res/layout/list_activity.xml
@@ -11,6 +11,8 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/listview"
         android:divider="@android:color/darker_gray"
+        android:textSize="@dimen/list_main_text_size"
+        android:textColor="@color/text_list_color"
         android:dividerHeight="1px"></ListView>
    </LinearLayout>
 
