--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,6 @@
     <dimen name="alert_detail_button_width">120dp</dimen>
     <dimen name="alert_detail_button_height">50dp</dimen>
     <dimen name="alert_detail_button_margin">5dp</dimen>
+
+    <dimen name="list_main_text_size">15dp</dimen>
 </resources>
