--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="text_list_color">#808284</color>
     <color name="list_divider_color">#808284</color>
     <color name="corporate_color">#ffff</color>
+    <color name="corporate_text_color">#000</color>
 
 </resources>
